# diabetes-mlflow-lambda

./: .gitignore  README.md  hello.py  pyproject.toml  requirements.txt
data/splits/: split_metadata.json
environments/docker/: Dockerfile  docker-compose.yml
mlflow/local/: mlflow.db  mlflow.db.bak
mlflow/local/artifacts/1/4c40c1dedfd248e69d0c50b1748719b6/artifacts/model/: MLmodel  input_example.json  requirements.txt
mlflow/local/artifacts/1/6d59dc7204234a52b44b1c5ad517b816/artifacts/model/: MLmodel  model.pkl  requirements.txt
mlflow/local/artifacts/1/ca982be5fe2f49698e45832289ad4e7d/artifacts/model/: MLmodel  conda.yaml
mlflow/local/artifacts/1/ce25e6c087334f29935fd231cdc2ba0b/artifacts/model/: MLmodel
mlflow/local/artifacts/1/d8d40ba2fb0c40faa346cc101435ca77/artifacts/model/: MLmodel  conda.yaml  serving_input_example.json
models/docker/: model.joblib
models/local/: model.joblib
scripts/: build_lambda_package.py
src/: config.py
src/deployment/: lambda_handler.py
src/models/: preprocessing.py  training.py
src/validation/: cross_env_validation.py
