[project]
name = "diabetes-mlflow-lambda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "joblib==1.3.2",
    "mlflow==2.16.0",
    "numpy==1.24.3",
    "pandas==2.0.3",
    "scikit-learn==1.3.2",
]

[tool.uv]
dev-dependencies = [
    "black>=25.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
